WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308118
[GTK][WPE] LayerTreeHost should use WeakRef for WebPage member instead of a reference
https://bugs.webkit.org/show_bug.cgi?id=308118
Summary
[GTK][WPE] LayerTreeHost should use WeakRef for WebPage member instead of a r...
Carlos Garcia Campos
Reported
2026-02-18 01:12:48 PST
And protect it when used.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2026-02-18 01:21:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58912
EWS
Comment 2
2026-02-19 04:54:23 PST
Committed
307825@main
(3f7a23f7a999): <
https://commits.webkit.org/307825@main
> Reviewed commits have been landed. Closing PR #58912 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug